# Signal_bot_for_telegram-main

./: .gitignore  README.md  install_requirements.ps1  main.py  main.py.old  main_copy.py  mainold.py  measure_latency.py  parse_data.py  pyproject.toml  requirements.txt  run_scraper.ps1  scraper.py  test.py
Macrodroid/: MacroDroid.mdr  README.md
ui/: index.html  script.js  styles.css
